もうすこしかな

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ while.php
 while_break.php
 phpMyAdmin
 phpinfo.php
+test_table2.txt
+multi_add.php
+uploader.php
+uploader.html
+add_form_multi.html
